# nonogram-solver

./: .gitignore  LICENSE  README.md  setup.cfg
.github/workflows/: python-package.yml
puzzles/easy/: chess.json  edge.json  empty.json  empty.txt  full.json  full.txt  home.json  music.json  pyramid.json  pyramid.txt  snake.json  stairs.json
puzzles/medium/: bear.json  butterfly.json
puzzles/test/: basic_solver1.txt  nonogram_clues_only.json  nonogram_halfdone.json  nonogram_halfdone.txt  nonogram_load.json  nonogram_load.txt  nonogram_simple_boxes.json
solver/: basic.py  error.py  nonogram.py  performance.py  solver.py  test_performance.py
solver/basic/: basic.py  blanks.py  brute_force.py  brute_force_2.py  simple_boxes.py  trivial.py
solver/compound/: balanced.py  only_brute_force.py
src/nonogram_solver/: nonogram.py  performance.py
src/nonogram_solver/basic/: blanks.py  brute_force.py  brute_force_2.py  simple_boxes.py  trivial.py
src/nonogram_solver/compound/: balanced.py  only_brute_force.py
src/solver/: nonogram.py  performance.py
src/solver/basic/: blanks.py  simple_boxes.py  trivial.py
src/solver/compound/: balanced.py  only_brute_force.py
test/: basic_test.py  nonogram_test.py  test_balanced.py  test_basic.py  test_basic_row.py  test_blanks.py  test_brute_force.py  test_brute_force_2.py  test_nonogram.py  test_performance.py  test_row.py  test_simpleboxes.py  test_solver.py  test_trivial.py
test/puzzles/: blanks.json  clues_only_5_10.json  nonogram_trivial.json
