[metadata]
name = nonogram-solver
version = 0.0.1
author = Mike Jongen
author_email = mikejongen@hotmail.com
description = script to solve nonogram puzzles
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MikeJongen/nonogram-solver
project_urls =
    Bug Tracker = https://github.com/MikeJongen/nonogram-solver/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src